fixed showcase to display well on mobile

--- a/website/src/react-native/css/react-native.css
+++ b/website/src/react-native/css/react-native.css
@@ -1214,3 +1214,11 @@ div[data-twttr-id] iframe {
     margin: 0;
   }
 }
+
+
+@media only screen and (max-device-width: 840px) {
+  .showcaseSection .inner-content {
+    width: 100%;
+  }
+}
+
